# Sunday-Appetizers

./: .gitignore  CHANGELOG.MD  Cargo.toml  README.md  makefile
.githooks/: commit-msg  pre-commit
migrations/2021-12-04-234243_add-database-schema/: down.sql  up.sql
migrations/2021-12-20-224248_add-session-table/: down.sql  up.sql
src/: lib.rs  main.rs
src/models/: mod.rs
src/models/address/: address_data.rs  adresses.rs  mod.rs
src/models/customer/: customer_data.rs  customers.rs  mod.rs  orders_status.rs
src/models/errors/: error.rs
src/models/product/: mod.rs  product_data.rs  products.rs
src/routes/: auth.rs  costumer.rs  customer.rs  mod.rs  register.rs
src/schemas/: mod.rs  table_schemas.rs
src/utils/: auth.rs  db_conn.rs  mod.rs  test_route.rs
