[package]
name = "sunday_appetizers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.130", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
factori = "1.1.0"
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
bigdecimal = { version = "0.1.2", features = ["serde"] }
proc-macro2 = "1.0.29"
actix-web = "3.3.2"
serde_json="1.0"
unique-type-id-derive = "0.2"
unique-type-id = "0.2"
rand = "0.7.3"
rust-argon2 = "0.5"
log = "0.4"
actix-redis = { version = "0.9.1", features = ["web"] }
actix-session = "0.4.0"
actix-cors = "0.5"
actix-rt = "2.5.0"
r2d2 = "0.8.8"
actix-service = "1.0.1"
 
[dependencies.diesel]
features = ["chrono", "postgres", "r2d2", "uuidv07", "64-column-tables", "numeric"]
version = "1.4.8"
